--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib
-numpy
-pandas
-scikit-learn
-scipy
-seaborn
-pysindy
+matplotlib>=3.1.2
+numpy>=1.18.1
+pandas>=0.25.3
+scikit-learn>=0.22.1
+scipy>=1.4.1
+seaborn>=0.9.0
+pysindy>=0.12.0
